provider sharing apps - make unsuccessful journey added and removed applications for UR

--- a/app/views/v13/_summary.html
+++ b/app/views/v13/_summary.html
@@ -117,38 +117,24 @@
         <div class="govuk-details__text">
           <table class='govuk-table'>                    
             <thead class='govuk-table__head'>
-              <!-- <tr class='govuk-table__row'>
+              <tr class='govuk-table__row'>
                 <th scope='col' class='govuk-table__header'>Page</th>
-                <th scope='col' class='govuk-table__header'>What we've done</th>
+                <th scope='col' class='govuk-table__header'>Notes</th>
               </tr>
             </thead>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/view-vacancy/3c-dates">Edit vacancy dates</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v13/provider/view/0-dashboard">UR dashboard link</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED the journey to edit dates - live vacancy</li>
+                  <li> For pre-share with employer (part 1) of sharing applications journey</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/view-vacancy/3b-manage-vacancy-edited">Manage vacancy</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v13/provider/view/0-dashboard-employer-reviewed">UR dashboard link</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED to GDS style success notification banner - live vacancy</li>
-                  <li>CHANGED 'Edit vacancy' link to 'Edit vacancy dates' - live vacancy</li>
+                  <li> For employer reviewed (part 2) of sharing applications journey</li>
                 </td>
               </tr>
-              <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'>Choose organisation - <a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/create/employers-select">Choose vacancy organisation</a>
-                <br><br> <a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/create/employers-select-0">Choose vacancy organisation - 0 search results</a></td>
-                <td class='govuk-table__cell'>
-                  <li>CHANGED the page to align with other parts of selecting employer across the service - choose organisation</li>
-                </td>
-              </tr>
-              <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'>Choose organisation - <a class="govuk-link govuk-link--no-visited-state" href="/v9/provider/create/employers-confirm">Confirm organisation</a></td>
-                <td class='govuk-table__cell'>
-                  <li>ADDED new page to confirm organisation</li>
-                </td>
-              </tr> -->
             </tbody>
           </table> 
         </div>
