--- a/app/views/v13/provider/view/3a-live.html
+++ b/app/views/v13/provider/view/3a-live.html
@@ -199,7 +199,7 @@ Vacancies
           </tr>
 
           <tr class="govuk-table__row govuk-body-s">
-            <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
+            <td class="govuk-table__cell">Engineer Apprentice</td>
               <td class="govuk-table__cell">FENDI LTD</td>
               <td class="govuk-table__cell"> 2 </td>
               <td class="govuk-table__cell">11 Nov 2022</td>             
