--- a/app/views/v13/provider/view/3c-manage-applications-reviewed.html
+++ b/app/views/v13/provider/view/3c-manage-applications-reviewed.html
@@ -233,81 +233,81 @@ Manage vacancy
     {
       name: "Danielle Price",
       id: "HAK9F56",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "16 Oct 2022",
       disability: "Yes"
     },
     {
       name: "Bryant Cantu",
       id: "5J9L5BF",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Loretta Giles",
       id: "3LN79HH",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Blake Peterson",
       id: "FL7J007",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Regina Carey",
       id: "98J98FG",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Millicent Thompson",
       id: "NJLP6GF",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Deena Lawson",
       id: "C78N0LK",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Garland Valenzuela",
       id: "45DL0HV",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Jerome Cross",
       id: "79ML444",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
