--- a/app/views/v13/provider/view/3c-manage-applications-shortlist.html
+++ b/app/views/v13/provider/view/3c-manage-applications-shortlist.html
@@ -235,93 +235,93 @@ Manage vacancy
       disability: "Yes"
     },
     {
+      name: "Judy Ward",
+      id: "897DW5T",
+      status: "unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "15 Oct 2022",
+      disability: "No"
+    },
+    {
       name: "Danielle Price",
       id: "HAK9F56",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "16 Oct 2022",
       disability: "Yes"
     },
     {
       name: "Bryant Cantu",
       id: "5J9L5BF",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Loretta Giles",
       id: "3LN79HH",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Blake Peterson",
       id: "FL7J007",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Regina Carey",
       id: "98J98FG",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Millicent Thompson",
       id: "NJLP6GF",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Deena Lawson",
       id: "C78N0LK",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Garland Valenzuela",
       id: "45DL0HV",
-      status: "New",
+      status: "unsuccessful",
       link: "",
-      classes: "govuk-tag--blue",
+      classes: "govuk-tag--red",
       date: "17 Oct 2022",
       disability: "No"
     },
     {
       name: "Jerome Cross",
       id: "79ML444",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Judy Ward",
-      id: "897DW5T",
       status: "unsuccessful",
-      link: "../account/application-employer-reviewed-no",
+      link: "",
       classes: "govuk-tag--red",
-      date: "15 Oct 2022",
+      date: "17 Oct 2022",
       disability: "No"
     },
     {
