--- a/app/views/v13/provider/view/3c-manage-applications-unsuccessful.html
+++ b/app/views/v13/provider/view/3c-manage-applications-unsuccessful.html
@@ -18,12 +18,12 @@ Manage vacancy
     <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
       <div class="govuk-notification-banner__header">
         <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-          Success
+          Done
         </h2>
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Judy Ward has been made unsuccessful
+          Judy Ward has been made unsuccessful.
         </h3>
       </div>
     </div>
@@ -237,93 +237,93 @@ Manage vacancy
       disability: "Yes"
     },
     {
-      name: "Danielle Price",
-      id: "HAK9F56",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "16 Oct 2022",
-      disability: "Yes"
-    },
-    {
-      name: "Bryant Cantu",
-      id: "5J9L5BF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Loretta Giles",
-      id: "3LN79HH",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Blake Peterson",
-      id: "FL7J007",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Regina Carey",
-      id: "98J98FG",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Millicent Thompson",
-      id: "NJLP6GF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Deena Lawson",
-      id: "C78N0LK",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Garland Valenzuela",
-      id: "45DL0HV",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Jerome Cross",
-      id: "79ML444",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
       name: "Judy Ward",
       id: "897DW5T",
       status: "unsuccessful",
       link: "",
       classes: "govuk-tag--red",
       date: "15 Oct 2022",
+      disability: "No"
+    },
+    {
+      name: "Danielle Price",
+      id: "HAK9F56",
+      status: "unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "16 Oct 2022",
+      disability: "Yes"
+    },
+    {
+      name: "Bryant Cantu",
+      id: "5J9L5BF",
+      status: "unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "17 Oct 2022",
+      disability: "No"
+    },
+    {
+      name: "Loretta Giles",
+      id: "3LN79HH",
+      status: "unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "17 Oct 2022",
+      disability: "No"
+    },
+    {
+      name: "Blake Peterson",
+      id: "FL7J007",
+      status: "unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "17 Oct 2022",
+      disability: "No"
+    },
+    {
+      name: "Regina Carey",
+      id: "98J98FG",
+      status: "unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "17 Oct 2022",
+      disability: "No"
+    },
+    {
+      name: "Millicent Thompson",
+      id: "NJLP6GF",
+      status: "unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "17 Oct 2022",
+      disability: "No"
+    },
+    {
+      name: "Deena Lawson",
+      id: "C78N0LK",
+      status: "unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "17 Oct 2022",
+      disability: "No"
+    },
+    {
+      name: "Garland Valenzuela",
+      id: "45DL0HV",
+      status: "unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "17 Oct 2022",
+      disability: "No"
+    },
+    {
+      name: "Jerome Cross",
+      id: "79ML444",
+      status: "unsuccessful",
+      link: "",
+      classes: "govuk-tag--red",
+      date: "17 Oct 2022",
       disability: "No"
     },
     {
