--- a/app/views/v13/provider/view/7b-check-unsuccessful-single.html
+++ b/app/views/v13/provider/view/7b-check-unsuccessful-single.html
@@ -15,12 +15,12 @@ Manage vacancy
   <div class="govuk-grid-column-two-thirds">
 
 
-    <h1 class="govuk-heading-l">Are you sure you want to tell Judy Ward that they have been unsuccessful?</h1>
+    <h1 class="govuk-heading-l">Are you sure you want to tell Ellen Collins that they have been unsuccessful?</h1>
 
     
 
         <p class="govuk-body" >
-          This will notify <b>Judy Ward</b> that they won’t be offered the apprenticeship.
+          This will notify <b>Ellen Collins</b> that they won’t be offered the apprenticeship.
         </p>
 
         <h2 class="govuk-heading-m">Your message to the applicant:</h2>
@@ -33,7 +33,7 @@ Manage vacancy
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
 
-            <form method="post" action="3c-manage-applications-unsuccessful">
+            <form method="post" action="3c-manage-applications-unsuccessful-single">
 
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
