--- a/app/views/v13/provider/view/8a-multiple-unsuccessful-success.html
+++ b/app/views/v13/provider/view/8a-multiple-unsuccessful-success.html
@@ -22,9 +22,9 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Keith Stewart has been made successful 
+          Keith Stewart has been successful.
         </h3>
-        <p>Now let the other applicants know they are unsuccessful.</p>
+        <p>Now notify the other applicants that they have been unsuccessful.</p>
       </div>
     </div>
   
@@ -33,7 +33,7 @@ Manage vacancy
     
         
         <p class="govuk-body" >
-          Select the applications that are unsuccessful. This will notify the applicants that they have not got the role.
+          Select the applications that are unsuccessful. This will notify the applicants that they won’t be offered the apprenticeship.
         </p>
 
         <br>
@@ -134,123 +134,6 @@ Manage vacancy
       classes: "govuk-tag--blue",
       date: "16 Oct 2022",
       disability: "Yes"
-    },
-    {
-      name: "Danielle Price",
-      id: "HAK9F56",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "16 Oct 2022",
-      disability: "Yes"
-    },
-    {
-      name: "Bryant Cantu",
-      id: "5J9L5BF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Loretta Giles",
-      id: "3LN79HH",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Blake Peterson",
-      id: "FL7J007",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Regina Carey",
-      id: "98J98FG",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Millicent Thompson",
-      id: "NJLP6GF",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Deena Lawson",
-      id: "C78N0LK",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Garland Valenzuela",
-      id: "45DL0HV",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Jerome Cross",
-      id: "79ML444",
-      status: "New",
-      link: "",
-      classes: "govuk-tag--blue",
-      date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Keith Stewart",
-      id: "678CFR0",
-      status: "successful",
-      link: "",
-      classes: "govuk-tag--green",
-      date: "13 Oct 2022",
-      disability: "Prefer not to say"
-    },
-    {
-      name: "Judy Ward",
-      id: "897DW5T",
-      status: "unsuccessful",
-      link: "../account/application-employer-reviewed-no",
-      classes: "govuk-tag--red",
-      date: "15 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Ellen Collins",
-      id: "6H0IL55",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "13 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Wes Arnold",
-      id: "PL67D9F",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "13 Oct 2022",
-      disability: "No"
     }
 ]
 %}
