--- a/app/views/v13/provider/view/8a-multiple-unsuccessful.html
+++ b/app/views/v13/provider/view/8a-multiple-unsuccessful.html
@@ -20,7 +20,7 @@ Manage vacancy
     
         
         <p class="govuk-body" >
-          Select the applications that are unsuccessful. This will notify the applicants that they have not got the role.
+          Select the applications that are unsuccessful. This will notify the applicants that they won’t be offered the apprenticeship.
         </p>
 
         <br>
