--- a/app/views/v13/provider/view/8b-feedback-unsuccessful.html
+++ b/app/views/v13/provider/view/8b-feedback-unsuccessful.html
@@ -21,9 +21,9 @@ Manage vacancy
 
     <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="200">
       <div class="govuk-form-group">
-        <p>
+        <div id="sign-in-hint" class="govuk-hint">
           Your feedback will be sent to all applicants you have selected as unsuccessful.
-        </p>
+        </div>
         <textarea class="govuk-textarea govuk-js-character-count" id="word-count" name="give-feedback" rows="8" aria-describedby="word-count-info"></textarea>
       </div>
     
