--- a/app/views/v13/provider/account/application-review-no.html
+++ b/app/views/v13/provider/account/application-review-no.html
@@ -18,24 +18,28 @@ Manage apprentices
   <div class="govuk-grid-column-two-thirds">
 
 
+
+
+<!-- OPTION 1 -->
     <section>
       <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">
-        Keith Stewart
+        Ellen Collins
       </h1>
 
-      <p class="govuk-body-l">Application ID: 678CFR0</p>
+      <p class="govuk-body-l">Application ID: 6H0IL55</p>
 
       <div class="panel panel-border-narrow">
         <p class="govuk-body">
-          Keith Stewart<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
+          Ellen Collins<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
         </p>
         <p class="govuk-body">
           07812345678
-          <br> <a href="mailto:faizal.dawood@domainname.co.uk">keith.stewart@domainname.co.uk</a>
+          <br> <a href="mailto:faizal.dawood@domainname.co.uk">ellen.collins@domainname.co.uk</a>
         </p>
       </div>
     </section>
+
 
 <!-- ABOUT YOU -->
     <section>
@@ -118,41 +122,32 @@ Manage apprentices
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- EMPLOYER QUESTIONS -->
-<section>
-  <h2 class="govuk-heading-l">Additional questions</h2>
+    <section>
+      <h2 class="govuk-heading-l">Additional questions</h2>
 
-  <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
-  <p>XXXXXXXXXX</p>
+      <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
+      <p>XXXXXXXXXX</p>
 
-  <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
-  <p>Yes</p>
+      <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
+      <p>Yes</p>
 
-</section>
+    </section>
 
-<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
 <!-- ADDITIONAL QUESTIONS -->
-<section>
-  <h2 class="govuk-heading-l">Equality questions</h2>
-
-  <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
-  <p>No</p>
-
-  <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
-  <p>
-    <span>I don't have any interview support requirements</span>
-
-  </p>
-  <br>
-  <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-</section>
-
-<!-- EMPLOYER RESPONSE -->
     <section>
-      <h2 class="govuk-heading-l">Employer response</h2>
+      <h2 class="govuk-heading-l">Equality questions</h2>
 
-      <p>Yes, the employer wants to interview this applicant.</p>
+      <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
+      <p>No</p>
 
+      <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
+      <p>
+        <span>I don't have any interview support requirements</span>
+
+      </p>
+      <br>
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
@@ -160,8 +155,6 @@ Manage apprentices
 <section>
      
       <form method="post" action="application-new">
-   
-
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
@@ -171,8 +164,44 @@ Manage apprentices
               </h1>
             </legend>
 
+            <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="application-3" name="application" type="radio" value="shortlist" checked="selected">
+                <input class="govuk-radios__input" id="application" name="application" type="radio" value="review">
+                <label class="govuk-label govuk-radios__label" for="application">
+                  Give 'review' status
+                </label>
+                <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
+                 The applicant and employer will not be notified.
+                </div>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="contact-by-email">
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-email" name="contact-by-email" type="email" spellcheck="false" autocomplete="email">
+                </div>
+              </div>
+
+              
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application-2" name="application" type="radio" value="share">
+                <label class="govuk-label govuk-radios__label" for="application-2">
+                  Share with employer
+                </label>
+                <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
+                  Share an anonymised version of this application with the employer to review.
+                </div>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-2">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="contact-by-phone">
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="contact-by-phone" name="contact-by-phone" type="tel" autocomplete="tel">
+                </div>
+              </div>
+
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application-3" name="application" type="radio" value="shortlist">
                 <label class="govuk-label govuk-radios__label" for="application-3">
                   Give 'interviewing' status
                 </label>
