--- a/app/views/v13/provider/view/3c-manage-applications-shared.html
+++ b/app/views/v13/provider/view/3c-manage-applications-shared.html
@@ -172,6 +172,15 @@ Manage vacancy
       disability: "Prefer not to say"
     },
     {
+      name: "Ellen Collins",
+      id: "6H0IL55",
+      status: "new",
+      link: "../account/application-review-no",
+      classes: "govuk-tag--blue",
+      date: "13 Oct 2022",
+      disability: "No"
+    },
+    {
       name: "Keith Stewart",
       id: "678CFR0",
       status: "shared",
@@ -322,15 +331,6 @@ Manage vacancy
       link: "",
       classes: "govuk-tag--blue",
       date: "17 Oct 2022",
-      disability: "No"
-    },
-    {
-      name: "Ellen Collins",
-      id: "6H0IL55",
-      status: "Unsuccessful",
-      link: "",
-      classes: "govuk-tag--red",
-      date: "13 Oct 2022",
       disability: "No"
     },
     {
