--- a/app/views/v13/provider/view/3c-manage-applications-successful.html
+++ b/app/views/v13/provider/view/3c-manage-applications-successful.html
@@ -18,7 +18,7 @@ Manage vacancy
     <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
       <div class="govuk-notification-banner__header">
         <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-          Success
+          Done
         </h2>
       </div>
       <div class="govuk-notification-banner__content">
