--- a/app/views/v13/provider/view/8b-feedback-unsuccessful-single.html
+++ b/app/views/v13/provider/view/8b-feedback-unsuccessful-single.html
@@ -14,16 +14,16 @@ Manage vacancy
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-<form method="post" action="7b-check-unsuccessful">
+<form method="post" action="7b-check-unsuccessful-single">
 
-    <h1 class="govuk-heading-l"> Give feedback to Judy Ward</h1>
+    <h1 class="govuk-heading-l"> Give feedback to Ellen Collins</h1>
 
 
     <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="200">
       <div class="govuk-form-group">
-        <p>
+        <div id="sign-in-hint" class="govuk-hint">
           Help the applicant understand why their application was unsuccessful. Your comments will be sent to the applicant.
-        </p>
+        </div>
         <textarea class="govuk-textarea govuk-js-character-count" id="word-count" name="contact-by-unsuccessful" rows="8" aria-describedby="word-count-info"></textarea> 
       </div>
     
