--- a/app/views/v13/provider/view/6-employer-reviewed.html
+++ b/app/views/v13/provider/view/6-employer-reviewed.html
@@ -193,7 +193,7 @@ Vacancies
             <td class="govuk-table__cell">Entry Level Development Engineer Apprentice</td>
               <td class="govuk-table__cell">Gloucestershire Health and Care NHS Foundation Trust</td>
               <td class="govuk-table__cell">3 reviewed</td>
-              <td class="govuk-table__cell">01 Nov 2022</td>             
+              <td class="govuk-table__cell">31 Jan 2023</td>             
               <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
               <td class="govuk-table__cell"><a href="3c-manage-applications-reviewed" class="govuk-link">Review</a></td>   
           </tr>
@@ -203,7 +203,7 @@ Vacancies
               <td class="govuk-table__cell">FENDI LTD</td>
               <td class="govuk-table__cell"> 1 reviewed </td>
               <td class="govuk-table__cell">11 Nov 2022</td>             
-              <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--green">live</strong></td>
+              <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--grey">closed</strong></td>
               <td class="govuk-table__cell"><a href="#" class="govuk-link">Review</a></td>   
           </tr>
   </tbody>
