--- a/app/views/v13/provider/view/3b-vacancy-analytics.html
+++ b/app/views/v13/provider/view/3b-vacancy-analytics.html
@@ -20,9 +20,9 @@ Manage vacancy
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-     <p>Showing stats from 9th Jan 2023 to 15th Jan 2023</p>
+     <p>Showing stats from 9th Jan 2023 to 15th Jan 2023.</p>
     
-    <p class="govuk-body">Analytics show the total amount and the change from the previous 7 days</p>
+    <p class="govuk-body">Analytics show the total amount and the change from the previous 7 days.</p>
 
     <div id="analytics" class="govuk-grid-row">
       <div class="analytics--block govuk-grid-column-one-half" style="border: 1px solid">
@@ -44,7 +44,7 @@ Manage vacancy
         <h3 class="govuk-heading-s">Total times viewed</h3>
         <div class="analytics--summary">
           <!-- <div class="analytics--numeric">12</div> -->
-          <p class="analytics--info govuk-!-font-weight-bold govuk-!-font-size-48">12</p>
+          <p class="analytics--info govuk-!-font-weight-bold govuk-!-font-size-48">42</p>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <p class="analytics--info"><span class="govuk-!-font-weight-bold">+5</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
         </div>
@@ -54,7 +54,7 @@ Manage vacancy
         <h3 class="govuk-heading-s">Total applications started</h3>
         <div class="analytics--summary">
           <!-- <div class="analytics--numeric">7</div> -->
-          <p class="analytics--info govuk-!-font-weight-bold govuk-!-font-size-48">7</p>
+          <p class="analytics--info govuk-!-font-weight-bold govuk-!-font-size-48">27</p>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <p class="analytics--info"><span class="govuk-!-font-weight-bold">+1</span> increase <span class="govuk-visually-hidden"> in the last 7 days</span></p>
         </div>
