--- a/app/views/v13/provider/view/3c-manage-applications-unsuccessful-multiple.html
+++ b/app/views/v13/provider/view/3c-manage-applications-unsuccessful-multiple.html
@@ -23,7 +23,7 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Multiple applications made successful.
+          Multiple applications made unsuccessful.
         </h3>
         <p>
           A notification has been sent to each applicant.
