--- a/app/views/v13/provider/account/application-review.html
+++ b/app/views/v13/provider/account/application-review.html
@@ -179,7 +179,7 @@ Manage apprentices
               Give 'review' status
             </label>
             <div id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-              Label this applicant as under consideration. The applicant and employer will not be notified.
+              The applicant and employer will not be notified.
             </div>
           </div>
           <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact">
@@ -214,7 +214,7 @@ Manage apprentices
               Give 'interviewing' status
             </label>
             <div id="sign-in-3-item-hint" class="govuk-hint govuk-radios__hint">
-              Label this applicant to be interviewed by the employer. The applicant and employer will not be notified.
+              The applicant and employer will not be notified.
             </div>
           </div>
           <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-contact-3">
