content updates for extra questions page

--- a/app/views/v13/employer/create/extra-questions.html
+++ b/app/views/v13/employer/create/extra-questions.html
@@ -19,9 +19,15 @@ Do you have any questions you would like to ask applicants? (optional) - Recruit
 
              <p>Applicants will answer these questions if they apply through Find an apprenticeship.</p>
 
-             <p>For example, why do you want to work for this company? What interests you about this role? </p>
+             <!-- <p>For example, why do you want to work for this company? What interests you about this role? </p> -->
 
+             <p>You can add up to 2 questions that are relevant for your advert. For example: </p>
 
+             <ul class="govuk-list govuk-list--bullet">
+              <li>Are you able to drive a car?</li>
+              <li>What interests you about this role?</li>
+              <li>Why do you want to work for this company?</li>
+            </ul>
              <br>
   
              <div class="govuk-form-group">
