updated content for sharing applications consistency

--- a/app/views/v13/provider/view/3d-check-share.html
+++ b/app/views/v13/provider/view/3d-check-share.html
@@ -20,7 +20,7 @@ Manage vacancy
     
   <!-- list START       -->
         <p class="govuk-body" >
-          <b>Gloucestershire Health and Care NHS Foundation Trust</b> will be sent an anonymised version of this application:
+          <b>Gloucestershire Health and Care NHS Foundation Trust</b> will be sent an anonymised version of this application, with the applicant's name removed:
         </p>
 
         <div style="background-color: #f3f2f1; padding: 15px;">
