--- a/app/views/v13/provider/view/6b-check-share.html
+++ b/app/views/v13/provider/view/6b-check-share.html
@@ -20,7 +20,7 @@ Manage vacancy
 
   <!-- list START       -->
         <p class="govuk-body" >
-          <b>Gloucestershire Health and Care NHS Foundation Trust</b> will be sent anonymised versions of these applications:
+          <b>Gloucestershire Health and Care NHS Foundation Trust</b> will be sent anonymised versions of these applications, with the applicants' names removed:
         </p>
 
         <div style="background-color: #f3f2f1; padding: 15px;">
