--- a/app/views/v13/provider/view/3c-manage-applications-shared-multiple.html
+++ b/app/views/v13/provider/view/3c-manage-applications-shared-multiple.html
@@ -22,7 +22,7 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Multiple applications shared to employer's apprentice service account.
+          Multiple applications shared to employer's apprenticeship service account.
         </h3>
       </div>
     </div>
