provider content updates unsuccessful/successful

--- a/app/views/v13/provider/view/3c-manage-applications-successful.html
+++ b/app/views/v13/provider/view/3c-manage-applications-successful.html
@@ -23,7 +23,7 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Keith Stewart has been offered this job
+          Keith Stewart's application is successful.
         </h3>
       </div>
     </div>
