--- a/app/views/v13/provider/view/3c-manage-applications-unsuccessful-single.html
+++ b/app/views/v13/provider/view/3c-manage-applications-unsuccessful-single.html
@@ -22,7 +22,7 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Ellen Collins has been made unsuccessful.
+          Ellen Collins's application is unsuccessful.
         </h3>
       </div>
     </div>
