--- a/app/views/v13/provider/view/3c-manage-applications-unsuccessful.html
+++ b/app/views/v13/provider/view/3c-manage-applications-unsuccessful.html
@@ -23,7 +23,7 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Judy Ward made unsuccessful.
+          Judy Ward's application is unsuccessful.
         </h3>
       </div>
     </div>
