--- a/app/views/v13/provider/view/7a-check-successful.html
+++ b/app/views/v13/provider/view/7a-check-successful.html
@@ -15,7 +15,7 @@ Manage vacancy
   <div class="govuk-grid-column-two-thirds">
 
 
-    <h1 class="govuk-heading-l">Are you sure you want to notify Keith Stewart that they have been successful?</h1>
+    <h1 class="govuk-heading-l">Are you sure you want to make Keith Stewart's application successful?</h1>
 
     
 
@@ -34,13 +34,13 @@ Manage vacancy
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_yes" name="share_applications" type="radio" value="yes">
                 <label class="govuk-label govuk-radios__label" for="share_applications_yes">
-                  Yes, notify the applicant
+                  Yes, make this application successful and notify the applicant
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_no" name="share_applications" type="radio" value="no">
                 <label class="govuk-label govuk-radios__label" for="share_applications_no">
-                  No
+                  No, do not make this application successful
                 </label>
               </div>
             </div>
