--- a/app/views/v13/provider/view/7b-check-unsuccessful.html
+++ b/app/views/v13/provider/view/7b-check-unsuccessful.html
@@ -15,7 +15,7 @@ Manage vacancy
   <div class="govuk-grid-column-two-thirds">
 
 
-    <h1 class="govuk-heading-l">Are you sure you want to tell Judy Ward that they have been unsuccessful?</h1>
+    <h1 class="govuk-heading-l">Are you sure you want to make Judy Ward's application unsuccessful?</h1>
 
     
 
@@ -39,13 +39,13 @@ Manage vacancy
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_yes" name="share_applications" type="radio" value="yes">
                 <label class="govuk-label govuk-radios__label" for="share_applications_yes">
-                  Yes, notify the applicant
+                  Yes, make this application unsuccessful and notify the applicant
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_no" name="share_applications" type="radio" value="no">
                 <label class="govuk-label govuk-radios__label" for="share_applications_no">
-                  No
+                  No, do not make this application unsuccessful
                 </label>
               </div>
             </div>
