--- a/app/views/v13/provider/view/8a-multiple-unsuccessful-success.html
+++ b/app/views/v13/provider/view/8a-multiple-unsuccessful-success.html
@@ -22,7 +22,7 @@ Manage vacancy
       </div>
       <div class="govuk-notification-banner__content">
         <h3 class="govuk-notification-banner__heading">
-          Keith Stewart has been successful.
+          Keith Stewart's application is successful.
         </h3>
         <p>Now notify the other applicants that they have been unsuccessful.</p>
       </div>
