--- a/app/views/v13/provider/view/8c-check-multiple-unsuccessful.html
+++ b/app/views/v13/provider/view/8c-check-multiple-unsuccessful.html
@@ -47,7 +47,7 @@ Manage vacancy
 <br>
 <br>
 
-<h2 class="govuk-heading-m">These applicants will be notified with this message:</h2>
+<h2 class="govuk-heading-m">Your message to these applicants:</h2>
 
 <div class="govuk-inset-text">
   {{ data['give-feedback'] }}
@@ -64,13 +64,13 @@ Manage vacancy
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_yes" name="share_applications" type="radio" value="yes">
                 <label class="govuk-label govuk-radios__label" for="share_applications_yes">
-                  Yes, make these applicants unsuccessful and notify them
+                  Yes, make these applications unsuccessful and notify the applicants
                 </label>
               </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_no" name="share_applications" type="radio" value="no">
                 <label class="govuk-label govuk-radios__label" for="share_applications_no">
-                  No, don't make these applicants unsuccessful
+                  No, do not make these applications unsuccessful
                 </label>
               </div>
             </div>
